# grpc-test

./: .gitignore  CMakeLists.txt  Client.cpp  ClientExe.cpp  Echoer.cpp  Server.cpp  ServerExe.cpp  SimpleServer.proto
cmake/: FindgRPC.cmake
gRPC/: CMakeLists.txt  GServer.cpp  GServer.hpp
gRPC/cmake/: FindgRPC.cmake
